src/solution/sigmaott-authen/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-authentication
spec:
  type: ClusterIP
  ports:
  - name: rest
    port: 80
    protocol: TCP
